<resources>
    <string name="app_name">MoneyTrack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="money_track">Money Track</string>
    <string name="logo">Logo</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="checking_credentials">Checking Credentials</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="logout">Logout</string>
    <string name="check_session">Checking for active session</string>
    <string name="no_active_session">No active session found, trying to login with stored credentials</string>
    <string name="dashboard">Dashboard</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="categories">Categories</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="date">Date</string>
    <string name="salary">Salary</string>
    <string name="comment">Comment</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="add_income">Add Income</string>
    <string name="edit_income">Edit Income</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="download_data">Downloading data from the server</string>
    <string name="expense">Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="number_of_times_used">Number of times used %1$d</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="error_same_name_conflict">Category with same name already exists</string>
    <string name="specify_filters">Specify Filters</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="date_filter">From %1$s To %2$s</string>
    <string name="savings_title">Year %1$s</string>
    <string name="savings_overview">Savings Overview</string>
</resources>
