<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_by_alpha_white_24dp"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_loyalty_white_24dp"
        android:title="@string/categories"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_dashboard"
        android:icon="@drawable/ic_dashboard_white_24dp"
        android:title="@string/dashboard"
        app:showAsAction="always" />
</menu>