<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_track"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardBackgroundColor="@color/WhiteSmoke"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation"
        app:contentPadding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvEmail"
                style="@style/Delta.EditText"
                android:layout_marginBottom="@dimen/margin"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/tvPassword"
                style="@style/Delta.EditText"
                android:layout_marginBottom="@dimen/margin"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:theme="@style/Delta.PrimaryButton" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>