<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    android:paddingBottom="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/specify_filters"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
            app:srcCompat="@drawable/ic_close_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@android:string/cancel"
            android:minHeight="0px" />

    </LinearLayout>

    <EditText
        android:id="@+id/tvDateFilter"
        style="@style/Delta.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_today_black_24dp"
        android:drawablePadding="@dimen/padding"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        android:inputType="text"
        tools:ignore="TextFields" />

    <com.panosdim.moneytrack.multiselection.MultiSelectionSpinner
        android:id="@+id/tvCategoriesFilter"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        style="@style/Delta.Spinner"
        android:layout_marginBottom="@dimen/margin" />

    <EditText
        android:id="@+id/tvCommentFilter"
        style="@style/Delta.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClearFilters"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSetFilters"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>